recyclerview and adapter setup!

--- a/app/src/main/res/layout/activity_news_feed.xml
+++ b/app/src/main/res/layout/activity_news_feed.xml
@@ -7,13 +7,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".NewsFeedActivity">
+        tools:context=".newsfeed.NewsFeedActivity">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="24dp" />
+            android:orientation="vertical"
+            android:paddingBottom="24dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -21,7 +23,7 @@
 
         <variable
             name="viewModel"
-            type="com.tryden.deltanews.NewsFeedViewModel" />
+            type="com.tryden.deltanews.newsfeed.NewsFeedViewModel" />
     </data>
 
 </layout>
