--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="gray">#2b2b2b</color>
+    <color name="gray_light">#545454</color>
+    <color name="gray_dark">#000000</color>
+
+    <color name="red">#b43939</color>
+    <color name="red_light">#eb6a63</color>
+    <color name="red_dark">#7e0013</color>
 </resources>
