--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="off_white">#DFDFDF</color>
+
     <color name="gray">#2b2b2b</color>
     <color name="gray_light">#545454</color>
     <color name="gray_dark">#000000</color>
