--- a/app/src/main/res/layout/view_holder_news_feed_item.xml
+++ b/app/src/main/res/layout/view_holder_news_feed_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -14,6 +15,59 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:contentDescription="@null"
+                android:scaleType="centerCrop"
+                app:loadWithPicasso="@{imageUrl}"
+                app:layout_constraintBottom_toTopOf="@id/titleTextView"
+                app:layout_constraintDimensionRatio="16:9"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@tools:sample/backgrounds/scenic[2]" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/favoriteImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:background="?selectableItemBackgroundBorderless"
+                android:padding="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:tint="?colorOnSurface"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/sourceTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="12dp"
+                android:text="@{source}"
+                android:textColor="?colorOnSurface"
+                android:textSize="16sp"
+                android:textStyle="normal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
+                tools:text="Source" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/publishedTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="12dp"
+                android:text="@{published}"
+                android:textColor="?colorOnSurface"
+                android:textSize="14sp"
+                android:textStyle="italic"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/sourceTextView"
+                tools:text="April 3, 2023" />
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/titleTextView"
                 android:layout_width="0dp"
@@ -22,26 +76,24 @@
                 android:paddingHorizontal="12dp"
                 android:paddingTop="12dp"
                 android:paddingBottom="8dp"
+                android:text="@{title}"
                 android:textColor="?colorOnPrimary"
                 android:textSize="22sp"
                 android:textStyle="bold"
-                android:text="@{title}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/imageView"
                 tools:text="Title here" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/descriptionTextView"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="12dp"
+                android:text="@{description}"
                 android:textColor="?colorOnSurface"
                 android:textSize="16sp"
-                android:text="@{description}"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/titleTextView"
@@ -50,13 +102,28 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
-    
+
     <data>
+
         <variable
             name="title"
             type="String" />
+
         <variable
             name="description"
             type="String" />
+
+        <variable
+            name="imageUrl"
+            type="String" />
+
+        <variable
+            name="source"
+            type="String" />
+
+        <variable
+            name="published"
+            type="String" />
     </data>
+
 </layout>
